pkg/front_end/testcases/inference/constructors_infer_from_arguments_factory.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

class C<T extends core::Object> extends core::Object {
  generic-covariant-impl generic-covariant-interface field self::C::T t = null;
  constructor _() → void
    : super core::Object::•()
    ;
  static factory •<T extends core::Object>(self::C::•::T t) → self::C<self::C::•::T> {
    self::C<self::C::•::T> x = new self::C::_<self::C::•::T>();
    x.{self::C::t} = t;
    return x;
  }
}
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/constructors_infer_from_arguments_factory.dart:22:23: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  x. /*@target=C::t*/ t = /*error:INVALID_ASSIGNMENT*/ 'hello';\n                      ^"]/* from null */;
static method test() → dynamic {
  self::C<core::int> x = self::C::•<core::int>(42);
  x.{self::C::t} = "hello" as{TypeError} core::int;
}
static method main() → dynamic {}
